--- a/MauiGraphqlApp/MauiGraphqlApp.csproj
+++ b/MauiGraphqlApp/MauiGraphqlApp.csproj
@@ -52,6 +52,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="StrawberryShake.Blazor" Version="13.0.0-preview.*" />
+        <PackageReference Include="System.Reactive" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
